--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "SET NODE_ENV=dev && node index.js",
-    "test": "mocha --timeout 3000 --recursive"
+    "test": "mocha --timeout 30000 "
   },
   "author": "",
   "license": "ISC",
